syntax = "proto3";

option go_package = ".;order";

package order;

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
    rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
    rpc ProcessPayment(ProcessPaymentRequest) returns (ProcessPaymentResponse);
    rpc CancelOrder(CancelOrderRequest) returns (CancelOrderResponse);
}

message OrderItem {
    int32 product_id = 1;
    int32 quantity = 2;
    double price = 3;
}

message Order {
    int32 id = 1;
    int32 user_id = 2;
    repeated OrderItem items = 3;
    double total_amount = 4;
    string status = 5; // "pending", "paid", "cancelled", "completed"
    string created_at = 6;
    string updated_at = 7;
}

message CreateOrderRequest {
    int32 user_id = 1;
    repeated OrderItem items = 2;
}

message CreateOrderResponse {
    Order order = 1;
}

message GetOrderRequest {
    int32 order_id = 1;
}

message GetOrderResponse {
    Order order = 1;
}

message ProcessPaymentRequest {
    int32 order_id = 1;
    string payment_method = 2;
    string payment_details = 3;
}

message ProcessPaymentResponse {
    bool success = 1;
    string message = 2;
    Order order = 3;
}

message CancelOrderRequest {
    int32 order_id = 1;
}

message CancelOrderResponse {
    bool success = 1;
    string message = 2;
}