syntax = "proto3";

option go_package = ".;product";

package product;

service ProductService {
    rpc GetProducts(GetProductsRequest) returns (GetProductsResponse);
    rpc GetProduct(GetProductRequest) returns (GetProductResponse);
    rpc UpdateStock(UpdateStockRequest) returns (UpdateStockResponse);
}

message Product {
    int32 id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
    int32 stock = 5;
    int32 shop_id = 6;
    string created_at = 7;
    string updated_at = 8;
}

message GetProductsRequest {
    int32 page = 1;
    int32 limit = 2;
    int32 shop_id = 3;
}

message GetProductsResponse {
    repeated Product products = 1;
    int32 total = 2;
    int32 page = 3;
    int32 limit = 4;
}

message GetProductRequest {
    int32 product_id = 1;
}

message GetProductResponse {
    Product product = 1;
}

message UpdateStockRequest {
    int32 product_id = 1;
    int32 quantity = 2;
    string operation = 3; // "add", "subtract", "set"
}

message UpdateStockResponse {
    bool success = 1;
    int32 new_stock = 2;
}